feat: add measure to ingredients of a recipe
