# src/main/java/com/genfood/foodgenback/endpoint/rest/model/Recipe.java
@@ -1,5 +1,6 @@
 package com.genfood.foodgenback.endpoint.rest.model;
 
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -13,4 +14,5 @@ public class Recipe {
   private String id;
   private String name;
   private String readme;
+  private List<RecipeIngredient> ingredients;
 }
