# src/main/java/com/genfood/foodgenback/endpoint/rest/model/RecipeIngredient.java
@@ -1,6 +1,5 @@
 package com.genfood.foodgenback.endpoint.rest.model;
 
-import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -10,7 +9,8 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 @Data
 @Builder
-public class RecipeIngredients {
-  private Recipe recipe;
-  private List<Ingredient> ingredients;
+public class RecipeIngredient {
+  private String id;
+  private String ingredientName;
+  private String measure;
 }
